--- a/WaterPotability.html
+++ b/WaterPotability.html
@@ -72,6 +72,8 @@
 
             Through this application, I aim to analyse a few samples of water, 
             test for potential potability and verify with the given values.
-        </section>
+
+            <br><a href="https://github.com/rohan-31/WaterCheck">Link to my github repository></a></br>
+         </section>
     </body>
 </html>
